fixing spacing in the schedule

--- a/src/Schedule.css
+++ b/src/Schedule.css
@@ -1,6 +1,6 @@
 /* Schedule Section */
 .schedule-section {
-    padding: 5% 10%;
+    padding: 6% 10%;
     color: white;
     display: flex;
     justify-content: center;
@@ -18,15 +18,15 @@
     font-size: 2.5rem;
     font-weight: bold;
     text-transform: uppercase;
-    margin-bottom: 10px;
-    text-align: left;
+    margin-bottom: 50px;
+    text-align: center;
   }
   
   /* Time Range Text */
   .schedule-time-range {
     font-size: 1.2rem;
     color: #ccc;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     text-align: left;
   }
   
